# cpp-bot

./: .env  .gitignore  CLAUDE.md  CMakeLists.txt  VERIFICATION.md  build.sh
apps/: bench_endgame.cpp  hanabi_bot.cpp  replay_log.cpp
cmake/: deps.cmake  warnings.cmake
include/hanabi/: settings.h  version.h
include/hanabi/basics/: action.h  card.h  clue.h  clue_result.h  connection.h  eval.h  fix.h  game.h  identity.h  identity_set.h  interp.h  options.h  player.h  player_elim.h  sarcastic.h  state.h  variant.h
include/hanabi/conventions/reactor/: interpret_clue.h  interpret_reaction.h  interpret_reactive.h  reactive_table.h  state_eval.h
include/hanabi/conventions/variants/: brownish.h  inverted.h  pinkish.h  predicates.h  reactive_table.h  reversed.h
include/hanabi/endgame/: forced_endgame.h  fraction.h  helper.h  solver.h  winnable.h
include/hanabi/instrumentation/: timer.h
include/hanabi/logging/: decide_trace.h  game_logger.h  state_snapshot.h
include/hanabi/net/: auth.h  codec.h  commands.h  notes.h  ws_transport.h
scripts/: bug_to_test.sh  find_game.sh  log_summary.py  show_turn.py
src/: settings.cpp
src/basics/: action.cpp  card.cpp  clue_result.cpp  connection.cpp  decide.cpp  eval.cpp  fix.cpp  game.cpp  identity_set.cpp  options.cpp  placeholder.cpp  player.cpp  player_elim.cpp  player_game.cpp  sarcastic.cpp  state.cpp  variant.cpp
src/conventions/reactor/: interpret_clue.cpp  interpret_reaction.cpp  interpret_reactive.cpp  reactive_table.cpp  state_eval.cpp
src/conventions/variants/: brownish.cpp  inverted.cpp  pinkish.cpp  predicates.cpp  reactive_table.cpp
src/endgame/: forced_endgame.cpp  helper.cpp  solver.cpp  winnable.cpp
src/instrumentation/: timer.cpp
src/logging/: decide_trace.cpp  game_logger.cpp  state_snapshot.cpp
src/net/: auth.cpp  codec.cpp  commands.cpp  notes.cpp  ws_transport.cpp
tests/: test_harness.cpp  test_harness.h  test_harness_smoke.cpp  test_smoke.cpp
tests/test_bad_reaction/: test_replay_1915981_loaded_bob_reacts_to_stable_clue.cpp
tests/test_bad_reactive_target/: test_replay_1916813_clued_trash_over_unclued_trash.cpp  test_replay_1916888_known_trash_targeted_over_unknown.cpp
tests/test_basics/: test_action.cpp  test_clue.cpp  test_game.cpp  test_identity_set.cpp  test_reactive.cpp  test_snapshot_roundtrip.cpp  test_stable_ref_discard.cpp  test_state.cpp  test_strike_preserves_ctp.cpp  test_variants.cpp
tests/test_decision_making/: test_high_value_clue.cpp  test_low_clue_count.cpp  test_replay_1916933_clue_forces_discard_of_queued_playable.cpp
tests/test_endgame/: replay_helpers.h  test_forced_endgame.cpp  test_helper.cpp  test_replay_1874799.cpp  test_replay_1875252.cpp  test_replay_1875304.cpp  test_replay_1875305.cpp  test_replay_1876746.cpp  test_replay_1882268.cpp  test_replay_1882549.cpp  test_replay_1882573.cpp  test_replay_1883183.cpp  test_replay_1883510.cpp  test_replay_1883535.cpp  test_replay_1883650.cpp  test_replay_1883676.cpp  test_replay_1883728.cpp  test_replay_1884033.cpp  test_replay_1884157.cpp  test_replay_1884192.cpp  test_replay_1884348.cpp  test_replay_1884355.cpp  test_replay_1884410.cpp  test_replay_1884469.cpp  test_replay_1885375.cpp  test_replay_1885467.cpp  test_replay_1885527.cpp  test_replay_1885536.cpp  test_replay_1885550.cpp  test_replay_1885749.cpp  test_replay_1885855.cpp  test_replay_1885899.cpp  test_replay_1888951.cpp  test_replay_1888970.cpp  test_replay_1889209.cpp  test_replay_1889318.cpp  test_replay_1890204.cpp  test_replay_1892112.cpp  test_replay_1892115.cpp  test_replay_1892197.cpp  (+12 more)
tests/test_endgame/replays/: 1876746.json  1882268.json  1883183.json  1883510.json  1883535.json  1883650.json  1883676.json  1883728.json  1884033.json  1884157.json  1884192.json  1884348.json  1884410.json  1884469.json  1885375.json  1885467.json  1885527.json  1885536.json  1885550.json  1885749.json  1885855.json  1885899.json  1888951.json  1888970.json  1889209.json  1889318.json  1890204.json  1892112.json  1892115.json  1892197.json  1892259.json  1892397.json  1892428.json  1892511.json  1899044.json  1915981.json  1916791.json  1916813.json  1916815.json  1916888.json  (+4 more)
tests/test_logging/: test_game_logger_rename.cpp
tests/test_net/: test_codec.cpp  test_commands.cpp
tests/test_reactor/: test_allplays.cpp  test_ctd_revives.cpp  test_dc_target_retarget.cpp  test_discard_penalty.cpp  test_orange.cpp  test_reactive_inferred_narrow.cpp  test_reactive_table.cpp  test_reversed.cpp  test_same_hand_dupe_playables.cpp
tests/test_stacked_plays/: test_replay_1916815_play_target_stacked_on_ctp.cpp
